<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reset Unread Sms</string>
    <string name="unreadsms_label">Unread Sms list :</string>
    <string name="no_unreadsms">No unread sms found.\n\n\nClick on <i>Mark all as read</i>\nsome SMS are sneaky !</string>
    <string name="thanks">Unread SMS hunt is over\n\n<b>Please donate :)</b></string>
    <string name="reset_button">Mark all as read</string>
    <string name="reset_done">All your SMS have been marked as read !</string>
    <string name="loading_sms">Loading unread SMS…</string>
    <string name="updating_sms">Updating unread SMS…</string>
    <string name="about_label">About</string>
    <string name="about">\?</string>
    <string name="about_content">Kamosoft 2013</string>
    <string name="ok">Ok</string>
    <string name="donate">
        If this application prevent you from throwing your phone out the
        window :
    </string>
    <string name="sms_from">
        <b>From</b>
    </string>
    <string name="sms_address">
        <b>From</b>
    </string>
    <string name="sms_content">
        <b>Content</b>
    </string>
    <string name="sms_status">
        <b>Status</b>
    </string>
    <string name="processing">Processing…</string>
    <string name="paypal_link_usd" formatted="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=WX8XCTC334VFN</string>
    <string name="paypal_link_eur" formatted="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=VM7UW6FNWWH8Q</string>
    <string-array name="currencies">
        <item>Euro / €</item>
        <item>Dollar / $</item>
    </string-array>
    <string name="pick_currency">Pick a currency</string>
</resources>
